--- a/style.css
+++ b/style.css
@@ -26,21 +26,21 @@ h1 {
     text-align: center;
     font-size: 20px;
 }
-#button{
+#button {
     z-index: 1;
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 0;
+    /* height: 0; Change this line to a suitable height or height: auto; */
     border: 3px;
     text-shadow: 0 0 10px #ffffff;
     margin: 10px;
     padding: 0;
 }
 
+
 a {
     z-index: 1;
-    display: block;
     text-align: center;
     align-content: center;
     color: white;
@@ -52,6 +52,9 @@ a {
     width: 180px;
     text-decoration: none;
     box-shadow: 0 0 10px #3b3838;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
 }
 a:hover{
     background-color: #111;
@@ -76,7 +79,7 @@ html, body {
 
 body {
     z-index: 0;
-    display: revert;
+    display: block; /* Change revert to block */
     width: 100%;
     height: 100%;
     color: #000;
@@ -88,7 +91,7 @@ body {
 
 .lines {
     z-index: -1;
-    position: page;
+    /* position: page; Remove this line */
     top: 0;
     left: 0;
     right: 0;
@@ -96,6 +99,7 @@ body {
     margin: auto;
     width: 90vw;
 }
+
 
 .line {
     z-index: 0;
