--- a/style.css
+++ b/style.css
@@ -48,6 +48,7 @@ a {
     padding: 0;
     background-color: #2f2f2f;
     border-radius: 80px;
+    font-size: 22px;
     height: 80px;
     width: 180px;
     text-decoration: none;
