--- a/style.css
+++ b/style.css
@@ -151,3 +151,59 @@ body {
         top: 100%;
     }
 }
+
+@media screen and (max-width: 600px) {
+    body {
+        font-size: 18px;
+    }
+
+    .button {
+        flex-direction: column;
+    }
+
+    button {
+        margin-bottom: 20px;
+        margin-right: 10px;
+        font-size: 20px;
+    }
+
+    h1 {
+        font-size: 4em;
+    }
+
+    p {
+        font-size: 1em;
+    }
+    #circle {
+        display: none;
+    }
+    a{
+        font-size: 1em;
+    }
+}
+
+@media screen and (max-width: 360px) {
+    body {
+        font-size: 16px;
+    }
+
+    .button {
+        flex-direction: column;
+    }
+
+    button {
+        margin-bottom: 15px;
+        font-size: 19px;
+    }
+
+    h1 {
+        font-size: 3em;
+    }
+
+    p {
+        font-size: 0.8em;
+    }
+    #circle {
+        display: none;
+    }
+}
