--- a/style.css
+++ b/style.css
@@ -1,116 +1,159 @@
-body, html {
-    background-color: #181a1b;
-    color: white;
-    font-family: 'Clash Display', sans-serif;
-    height: 100%;
-}
-
-h1{
-    display: flex;
-    text-align: center;
-    font-size: 95px;
-    font-family: 'Clash Display', sans-serif;
-    color: rgba(255, 255, 255, 0.84);
-    text-shadow: 0 0 10px #ffffff;
-    margin: auto;
-    align-items: center;
-    justify-content: center;
-    height: 80vh;
-}
-
-#content {
-    display: block;
-    align-items: center;
-    justify-content: center;
-    align-content: center;
-    text-align: center;
-    font-size: 20px;
-}
-#button {
-    z-index: 1;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    /* height: 0; Change this line to a suitable height or height: auto; */
-    border: 3px;
-    text-shadow: 0 0 10px #ffffff;
-    margin: 10px;
-    padding: 0;
-}
-
-
-a {
-    z-index: 1;
-    text-align: center;
-    align-content: center;
-    color: white;
-    margin: 15px;
-    padding: 0;
-    background-color: #2f2f2f;
-    border-radius: 30px;
-    font-size: 22px;
-    height: 80px;
-    width: 180px;
-    text-decoration: none;
-    box-shadow: 0 0 10px #3b3838;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    transition: color 0.5s ease, opacity 0.5s ease, background-color 0.5s ease, transform 0.4s ease;
-}
-a:hover{
-    background-color: #111;
-    box-shadow: 0 0 20px #8006da;
-    text-shadow: 0 0 20px #8006da;
-    transform: scale(1.1);
-}
-a:visited {
-    color: white;
+:root {
+    --font-family: 'Clash Display', sans-serif;
 }
 
 * {
     margin: 0;
     padding: 0;
-    box-sizing: border-box !important;
+    box-sizing: border-box;
+
+    text-rendering: optimizeLegibility;
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
 }
 
-html, body {
-    height: 100%;
-}
+body, html {
+    margin: 0;
+    padding: 0;
 
-body {
-    z-index: 0;
-    display: block; /* Change revert to block */
-    width: 100%;
+    background-color: #181a1b;
+    width: 100vw;
     height: 100%;
+    min-height: 100vh;
+
+    font-family: system-ui, -apple-system, var(--font-family), Roboto, sans-serif;
+    font-style: normal;
     color: #000;
-    line-height: 1.6;
+
+    scroll-behavior: smooth;
     position: relative;
-    font-family: 'Clash Display', sans-serif;
     overflow: hidden;
 }
 
-.lines {
-    z-index: -1;
-    /* position: page; Remove this line */
-    top: 0;
-    left: 0;
-    right: 0;
-    height: 100%;
-    margin: auto;
-    width: 90vw;
+@font-face {
+    font-family: "Clash Display";
+    src: url("./fonts/ClashDisplay-Extralight.otf");
+    font-weight: 200;
 }
 
+@font-face {
+    font-family: "Clash Display";
+    src: url("./fonts/ClashDisplay-Light.otf");
+    font-weight: 300;
+}
+
+@font-face {
+    font-family: "Clash Display";
+    src: url("./fonts/ClashDisplay-Regular.otf");
+    font-weight: 400;
+}
+
+@font-face {
+    font-family: "Clash Display";
+    src: url("./fonts/ClashDisplay-Medium.otf");
+    font-weight: 500;
+}
+
+@font-face {
+    font-family: "Clash Display";
+    src: url("./fonts/ClashDisplay-Semibold.otf");
+    font-weight: 600;
+}
+
+@font-face {
+    font-family: "Clash Display";
+    src: url("./fonts/ClashDisplay-Bold.otf");
+    font-weight: 700;
+}
+
+h1 {
+    font: 700 95px/100% var(--font-family);
+    text-align: center;
+    color: #FFFFFFD6;
+    text-shadow: 0 0 10px #ffffff;
+}
+
+.content {
+    z-index: 2;
+
+    height: 100%;
+
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    gap: 24px;
+}
+
+.links {
+    position: relative;
+    z-index: 1;
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 24px;
+
+    border: 3px;
+    text-shadow: 0 0 10px #ffffff;
+}
+
+.links a {
+    padding: 10px 20px;
+
+    max-width: max-content;
+    width: 100%;
+    min-width: 189px;
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+
+    background-color: #2f2f2f;
+    border-radius: 16px;
+
+    font: 500 16px/24px var(--font-family);
+    color: #FFF;
+    text-decoration: none;
+
+    box-shadow: 0 0 10px #3b3838;
+
+    transition: color 0.5s ease, opacity 0.5s ease, background-color 0.5s ease, transform 0.4s ease;
+}
+
+a:hover {
+    background-color: #111;
+    box-shadow: 0 0 20px #8006da;
+    text-shadow: 0 0 20px #8006da;
+    transform: scale(1.1);
+}
+
+a:visited {
+    color: white;
+}
+
+/*Lines*/
+.lines {
+    z-index: -1;
+    top: -50vh;
+    left: -50vw;
+    right: 0;
+    bottom: 0;
+    height: 200vh;
+    margin: auto;
+    width: 200vw;
+}
 
 .line {
     z-index: 0;
     position: absolute;
     width: 1px;
-    height: 100%;
-    top: 0;
+    height: 150vh;
+    top: -30vh;
     left: 50%;
-    background: rgba(255, 255, 255, 0.1);
+    /* background: rgba(255, 255, 255, 0.1); */
     overflow: hidden;
+    transform: rotate(-45deg);
 }
 
 .line::after {
@@ -148,10 +191,27 @@ body {
         top: -50%;
     }
     100% {
-        top: 100%;
+        top: 150%; /* Zwiększono wartość, aby animacja wychodziła poza dolny róg ekranu */
     }
 }
 
+
+/*Stars*/
+#particles-js {
+    position: absolute;
+    top: 0;
+
+    height: 100vh;
+    width: 100vw;
+
+    /*background-color: #000000;*/
+    /*background-image: url("");*/
+    background-repeat: no-repeat;
+    background-size: cover;
+    /*background-position: 50% 50%;*/
+}
+
+/*Mobile view*/
 @media screen and (max-width: 600px) {
     body {
         font-size: 18px;
@@ -180,23 +240,28 @@ body {
         width: 200px;
     }
 }
-
 @media screen and (max-width: 360px) {
     body {
         font-size: 16px;
     }
-
     #button {
         flex-direction: column;
         margin-bottom: 15px;
         font-size: 19px;
     }
-
     h1 {
         font-size: 3em;
     }
-
     p {
         font-size: 0.8em;
+    }
+}
+@media (width <= 660px) {
+    .content {
+        gap: 64px;
+    }
+
+    .links {
+        flex-direction: column;
     }
 }
