--- a/style.css
+++ b/style.css
@@ -95,6 +95,10 @@ h1 {
 
     border: 3px;
     text-shadow: 0 0 10px #ffffff;
+
+      -webkit-user-select: none; /* Safari */
+      -ms-user-select: none; /* IE 10 and IE 11 */
+      user-select: none; /* Standard syntax */
 }
 
 .links a {
