--- a/style.css
+++ b/style.css
@@ -16,7 +16,6 @@
     user-select: none; /* Standard syntax */
 }
 
-
 body, html {
     margin: 0;
     padding: 0;
@@ -126,6 +125,10 @@ h1 {
     transition: color 0.5s ease, opacity 0.5s ease, background-color 0.5s ease, transform 0.4s ease;
 }
 
+#link:active{
+    transform: scale(0.9);
+}
+
 a:hover {
     background-color: #111;
     box-shadow: 0 0 20px #8006da;
@@ -137,7 +140,7 @@ a:visited {
     color: white;
 }
 
-/*Lines*/
+/*lines*/
 .lines {
     z-index: -1;
     top: -50vh;
@@ -241,8 +244,10 @@ a:visited {
     }
     a{
         z-index: 2;
-        font-size: 1em;
+
         width: 200px;
+
+        font-size: 1em;
     }
 }
 @media screen and (max-width: 360px) {
