--- a/style-about.css
+++ b/style-about.css
@@ -128,7 +128,16 @@ h1 {
     text-shadow: 0 0 10px #111;
 }
 
-.content #back{
+.back{
+    padding: 3vh;
+}
+
+.back{
+    padding:3vh;
+}
+.back a{
+    position: absolute;
+
     padding: 10px;
     margin-left: 3vw;
 
@@ -139,25 +148,23 @@ h1 {
     justify-content: center;
     align-items: center;
     text-align: center;
-    transform: translateY(-110px);
-
 
     background-color: #2f2f2f;
     border-radius: 16px;
-
     font: 500 16px/24px var(--font-family);
-    color: #FFF;
-    text-decoration: none;
-
+    color: #fff;
     box-shadow: 0 0 10px #3b3838;
 
     transition: color 0.5s ease, opacity 0.5s ease, background-color 0.5s ease, transform 0.4s ease;
+
+    text-decoration: none;
 }
-.content #back:hover{
+
+.back a:hover {
     background-color: #111;
     box-shadow: 0 0 20px #8006da;
     text-shadow: 0 0 20px #8006da;
-    transform: scale(1.1) translateY(-110px);
+    transform: scale(1.1);
 }
 
 /*lines*/
@@ -281,8 +288,19 @@ h1 {
             transform: translateY(-18%);
             box-sizing: border-box;
         }
-        #back{
+        .content #back {
+            padding: 8px; /* zmniejszenie paddingu na mniejszych ekranach */
+            margin: 0 auto; /* ustawienie marginesu na auto, aby wyśrodkować przycisk */
+            max-width: 90%; /* zmniejszenie szerokości na mniejszych ekranach */
+            min-width: auto; /* usuń min-width na mniejszych ekranach */
+            font-size: 14px; /* zmniejszenie rozmiaru czcionki */
+            transform: translateY(-80px); /* zmiana przesunięcia */
+        }
 
+        .content #back:hover {
+            box-shadow: 0 0 15px #8006da; /* zmiana rozmiaru cienia przy najechaniu */
+            text-shadow: 0 0 15px #8006da; /* zmiana cienia tekstu przy najechaniu */
+            transform: scale(1.05) translateY(-80px); /* zmiana transformacji przy najechaniu */
         }
     }
 }
