--- a/style-about.css
+++ b/style-about.css
@@ -38,6 +38,11 @@ body, html {
     min-height: 100vh;
 }
 
+a{
+    color:inherit;
+    text-decoration: none;
+}
+
 @font-face {
     font-family: "Clash Display";
     src: url("./fonts/ClashDisplay-Extralight.otf");
@@ -99,7 +104,6 @@ h1 {
 .info{
     z-index: 14;
     position: relative;
-    display: flex;
 
     font-family: 200 24px/26px var(--font-family);
     background-color: #3b3838;
@@ -107,7 +111,6 @@ h1 {
     border-radius: 20px;
 
 
-    justify-content: center;
     padding: 20px;
     margin: 10px;
 
@@ -122,10 +125,9 @@ h1 {
 
     border: 3px;
 }
-#Sit{
-    text-decoration: none;
-    color: white;
-    text-shadow: 0 0 10px #111;
+
+.info a{
+    text-decoration: underline;
 }
 
 .back{
