--- a/style-about.css
+++ b/style-about.css
@@ -99,13 +99,23 @@ h1 {
 
 .about_content{
     color: #fff;
+
+    justify-content: center;
+    align-items: center;
+    align-content: center;
+
+    display: flex;
+    flex-direction: column;
+    gap: 36px;
+    
+    font: 24px;
+    max-width: 100vw;
 }
 
 .info{
     z-index: 14;
     position: relative;
 
-    font-family: 200 24px/26px var(--font-family);
     background-color: #3b3838;
     opacity: 75%;
     border-radius: 20px;
@@ -117,10 +127,10 @@ h1 {
     clip-path: border-box;
     max-width: max-content;
     max-height: max-content;
-    width: 80vw;
+    width: 50vw;
     height: max-content;
 
-    left: 10%;
+    /*left: 10%;*/
     gap: 36px;
 
     border: 3px;
@@ -131,7 +141,7 @@ h1 {
 }
 
 .back{
-    z-index: 1;
+    z-index: 2;
     padding: 3vh;
 }
 
@@ -142,7 +152,7 @@ h1 {
     position: absolute;
 
     padding: 10px;
-    margin-left: 3vw;
+    margin-left: 10px;
 
     max-width: max-content;
     width: 100%;
@@ -287,12 +297,20 @@ h1 {
             gap: 20vh;
         }
 
+        .about_content {
+            gap: 20px;
+
+            padding: 10px;
+            margin: 10px;
+            max-width: 100vw;
+        }
+
         .info {
             flex-direction: column;
             max-height: max-content;
             max-width: max-content;
+            width: 85vw;
             font-size: 0.75em;
-            left: 8%;
             transform: translateY(-18%);
             box-sizing: border-box;
 
