--- a/style-about.css
+++ b/style-about.css
@@ -94,8 +94,46 @@ h1 {
     display: flex;
     justify-content: center;
     flex-direction: column;
-    gap: 14vh;
+    gap: 6vh;
 }
+.languageSwitch{
+    z-index: 53;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+
+}
+
+.languageSwitch p{
+    padding: 10px 20px;
+
+    max-width: max-content;
+    width: 100%;
+    min-width: 189px;
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+
+    background-color: #2f2f2f;
+    border-radius: 16px;
+
+    font: 500 16px/24px var(--font-family);
+    color: #FFF;
+
+    box-shadow: 0 0 10px #3b3838;
+
+    transition: color 0.5s ease, opacity 0.5s ease, background-color 0.5s ease, transform 0.4s ease;
+}
+
+.languageSwitch p:hover {
+    background-color: #111;
+    box-shadow: 0 0 20px #8006da;
+    text-shadow: 0 0 20px #8006da;
+    transform: scale(1.1);
+}
+
 
 .about_content{
     color: #fff;
@@ -107,8 +145,7 @@ h1 {
     display: flex;
     flex-direction: column;
     gap: 36px;
-    
-    font: 24px;
+
     max-width: 100vw;
 }
 
@@ -294,7 +331,7 @@ h1 {
 
             transform: translateY(5%);
 
-            gap: 20vh;
+            gap: 10vh;
         }
 
         .about_content {
@@ -336,9 +373,9 @@ h1 {
         }
 
             .back:hover {
-            box-shadow: 0 0 15px #8006da; /* zmiana rozmiaru cienia przy najechaniu */
-            text-shadow: 0 0 15px #8006da; /* zmiana cienia tekstu przy najechaniu */
-            transform: scale(1.05) translateY(-80px); /* zmiana transformacji przy najechaniu */
+            box-shadow: 0 0 15px #8006da;
+            text-shadow: 0 0 15px #8006da;
+            transform: scale(1.05) translateY(-80px);
         }
     }
 }
