--- a/style.css
+++ b/style.css
@@ -158,6 +158,7 @@ a:visited {
     position: absolute;
     width: 1px;
     height: 200vh;
+    /*background: linear-gradient(to bottom, rgba(255, 255, 255, 0) 0%, #ffffff 100%);*/
     top: -30vh;
     left: 50%;
     /* background: rgba(255, 255, 255, 0.1); */
