--- a/style-about.css
+++ b/style-about.css
@@ -361,9 +361,7 @@ main{
 
             gap: 20px;
 
-            padding: 10px;
-            padding-bottom: 50px;
-
+            padding: 10px 10px 50px 10px;
             margin: 10px;
             max-width: 100vw;
         }
