--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
-:root {
-    --font-family: 'Clash Display', sans-serif;
+:root{
+    --font-family: 'satoshi', sans-serif;
 }
 
 * {
@@ -10,259 +10,157 @@
     text-rendering: optimizeLegibility;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
-
-    -webkit-user-drag: none; /* Undragable */
-    -webkit-user-select: none; /* Safari */
-    -ms-user-select: none; /* IE 10 and IE 11 */
-    user-select: none; /* Standard syntax */
 }
 
 body, html {
     margin: 0;
     padding: 0;
 
-    background-color: #181a1b;
+    background-image: linear-gradient(to right, #000000, #2c2828);
     width: 100vw;
     height: 100%;
     min-height: 100vh;
 
     font-family: system-ui, -apple-system, var(--font-family), Roboto, sans-serif;
     font-style: normal;
-    color: #000;
+    color: #FFF;
+    opacity: 80%;
 
     scroll-behavior: smooth;
     position: relative;
-    overflow: hidden;
+    overflow-x: hidden;
 }
 
-@font-face {
-    font-family: "Clash Display";
-    src: url("./fonts/ClashDisplay-Extralight.otf");
-    font-weight: 200;
-}
+.container {
+    display: flex;
+    flex-direction: column;
 
-@font-face {
-    font-family: "Clash Display";
-    src: url("./fonts/ClashDisplay-Light.otf");
-    font-weight: 300;
-}
+    justify-content: center;
+    align-items: center;
 
-@font-face {
-    font-family: "Clash Display";
-    src: url("./fonts/ClashDisplay-Regular.otf");
-    font-weight: 400;
-}
-
-@font-face {
-    font-family: "Clash Display";
-    src: url("./fonts/ClashDisplay-Medium.otf");
-    font-weight: 500;
-}
-
-@font-face {
-    font-family: "Clash Display";
-    src: url("./fonts/ClashDisplay-Semibold.otf");
-    font-weight: 600;
-}
-
-@font-face {
-    font-family: "Clash Display";
-    src: url("./fonts/ClashDisplay-Bold.otf");
-    font-weight: 700;
+    width: 100%;
+    height: 100%;
+    padding: 0 20px;
+    gap: 20px;
 }
 
 h1 {
-    font: 700 95px/100% var(--font-family);
+    font-family: var(--font-family);
+    font-size: 4rem;
+    font-weight: 700;
+    color: #FFF;
     text-align: center;
-    color: #FFFFFFD6;
-    text-shadow: 0 0 10px #ffffff;
+}
+.second-text{
+    font-family: var(--font-family);
+    font-size: 1.5rem;
+    font-weight: 500;
+    color: #FFF;
+    text-align: center;
 }
 
-.content {
-    z-index: 2;
-
-    height: 100%;
-
-    display: flex;
-    justify-content: center;
-    flex-direction: column;
-    gap: 24px;
-}
-
-.links {
-    /*position: relative;*/
-    z-index: 1;
-
+.buttons{
     display: flex;
     justify-content: center;
     align-items: center;
-    gap: 24px;
-
-    border: 3px;
-    text-shadow: 0 0 10px #ffffff;
+    gap: 20px;
 }
 
-.links a {
+button{
+    cursor: pointer;
+
+    background: #2f2f2f;
+    color: #FFF;
+
+    font-family: var(--font-family);
+    font-size: 1rem;
+
     padding: 10px 20px;
 
-    max-width: max-content;
-    width: 100%;
-    min-width: 189px;
+    border-radius: 8px;
 
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    text-align: center;
-
-    background-color: #2f2f2f;
-    border-radius: 16px;
-
-    font: 500 16px/24px var(--font-family);
-    color: #FFF;
-    text-decoration: none;
-
-    box-shadow: 0 0 10px #3b3838;
-
-    transition: color 0.5s ease, opacity 0.5s ease, background-color 0.5s ease, transform 0.4s ease;
+    transition: all 0.3s ease;
 }
 
-#links a:active{
+button:hover{
+    background-color: #fff;
+    color: #000;
+    transform: scale(1.2);
+}
+
+button:active{
     transform: scale(0.9);
 }
 
-a:hover {
-    background-color: #111;
-    box-shadow: 0 0 20px #8006da;
-    text-shadow: 0 0 20px #8006da;
-    transform: scale(1.1);
+button:focus{
+    outline: none;
 }
 
-a:visited {
-    color: white;
-}
+.content{
+    display: flex;
+    flex-direction: column;
 
-/*lines*/
-.lines {
-    z-index: -1;
-    top: -50vh;
-    left: -50vw;
-    right: 0;
-    bottom: 0;
-    height: 200vh;
-    margin: auto;
-    width: 200vw;
-}
+    align-items: center;
+    gap: 20px;
 
-.line {
-    z-index: 0;
-    position: absolute;
-    width: 1px;
-    height: 200vh;
-    /*background: linear-gradient(to bottom, rgba(255, 255, 255, 0) 0%, #ffffff 100%);*/
-    top: -30vh;
-    left: 50%;
-    /* background: rgba(255, 255, 255, 0.1); */
-    overflow: hidden;
-    transform: rotate(-45deg);
-}
-
-.line::after {
-    content: "";
-    display: block;
-    position: absolute;
-    height: 15vh;
     width: 100%;
-    top: -50%;
-    left: 0;
-    background: linear-gradient(to bottom, rgba(255, 255, 255, 0) 0%, #ffffff 75%, #ffffff 100%);
-    animation: drop 7s 0s infinite;
-    animation-fill-mode: forwards;
-    animation-timing-function: cubic-bezier(0.4, 0.26, 0, 0.97);
+    height: 800px;
 }
 
-.line:nth-child(1) {
-    margin-left: -25%;
+.AboutMeTitle{
+    font-family: var(--font-family);
+    font-size: 3rem;
+    font-weight: 700;
+    color: #FFF;
+    text-align: center;
+
+    width: 100%;
+    gap: 25px;
 }
 
-.line:nth-child(1)::after {
-    animation-delay: 2s;
+.AboutMeText{
+    font-family: var(--font-family);
+    font-size: 1rem;
+    font-weight: 500;
+    color: #FFF;
+
+    width: 40%;
 }
 
-.line:nth-child(3) {
-    margin-left: 25%;
+footer{
+    display: flex;
+    flex-direction: column;
+
+    font-family: var(--font-family);
+
+    justify-content: center;
+    align-items: center;
+    gap: 20px;
+
+    width: 100%;
+}
+footer a{
+    color: #FFF;
+    text-decoration: none;
 }
 
-.line:nth-child(3)::after {
-    animation-delay: 2.5s;
-}
-
-@keyframes drop {
-    0% {
-        top: -50%;
-    }
-    100% {
-        top: 150%; /* Zwiększono wartość, aby animacja wychodziła poza dolny róg ekranu */
-    }
-}
-
-
-/*Stars*/
-#particles-js {
-    position: absolute;
-    top: 0;
-
-    height: 100vh;
-    width: 100vw;
-
-    /*background-color: #000000;*/
-    /*background-image: url("");*/
-    background-repeat: no-repeat;
-    background-size: cover;
-    /*background-position: 50% 50%;*/
-}
-
-/*Mobile view*/
-@media screen and (max-width: 600px) {
-    body {
-        font-size: 18px;
+@media screen and (max-width: 768px){
+    .AboutMeText{
+        width: 80%;
     }
 
-    h1 {
-        font-size: 3em;
-        height: 30vh;
+    h1{
+        font-size: 2rem;
     }
 
-    p {
-        font-size: 1em;
-        height: 40vh;
-    }
-    a{
-        z-index: 2;
-
-        width: 200px;
-
-        font-size: 1em;
-    }
-}
-@media screen and (max-width: 360px) {
-    body {
-        font-size: 16px;
-    }
-    h1 {
-        font-size: 3em;
-    }
-    p {
-        font-size: 0.8em;
-    }
-}
-@media (width <= 660px) {
-
-    .links {
+    .buttons{
         flex-direction: column;
-        align-content: center;
-        align-items: center;
-        align-self: center;
-        max-width: max-content;
-        transform: translateY(-40px);
+    }
+
+    .second-text{
+        font-size: 1rem;
+    }
+    .AboutMeTitle{
+        font-size: 2rem;
     }
 }
