--- a/style-contact.css
+++ b/style-contact.css
@@ -27,7 +27,7 @@ body, html {
     gap: 24px;
 }
 
-h1, h2, p, #message {
+h1, h2 {
     font: 700 96px/100% var(--font-family);
     text-align: center;
     color: #FFFFFFD6;
@@ -37,18 +37,11 @@ h2 {
     font: 700 64px/100% var(--font-family);
 }
 
-p {
-    font: 400 24px/100% var(--font-family);
-}
-
-#message{
-    font: 700 36px/100% var(--font-family);
-}
-
-.links, .links_c2{
+.contact{
     z-index: 1;
 
     display: flex;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
     gap: 24px;
@@ -57,16 +50,18 @@ p {
     text-shadow: 0 0 10px #ffffff;
 }
 
-.links a, .links_c2 a, a:visited {
+.contact a{
     padding: 10px 20px;
     max-width: max-content;
     width: 100%;
-    min-width: 189px;
+    min-width: 500px;
+    height: 75px;
 
     display: flex;
     justify-content: center;
     align-items: center;
     text-align: center;
+    gap: 10px;
 
     background-color: #2f2f2f;
     border-radius: 16px;
@@ -81,10 +76,6 @@ p {
     transition: background-color 0.5s ease, transform 0.4s ease, border-color 0.8s ease;
 }
 
-.links a:active, .links_c2 a:active{
-    transform: scale(0.9);
-}
-
 a:hover {
     background-color: #111;
     box-shadow: 0 0 20px #8006da;
@@ -92,6 +83,14 @@ a:hover {
     transform: scale(1.1);
     border-color: #8006da;
 }
+
+.icon{
+    justify-content: flex-start;
+    width: 40px;
+    height: 40px;
+    margin-right: auto;
+}
+
 
 .lines {
     z-index: -1;
@@ -167,23 +166,15 @@ a:hover {
 }
 
 /*Mobile view*/
-@media (width <= 660px) {
+@media (width <= 660px){
     h1 {
         font-size: 3.5em;
-        height: 30vh;
     }
-    .content{
-        padding: 16px;
+    h2 {
+        font-size: 2.5em;
     }
-    #message{
-        margin: 20px;
-    }
-    .links, .links_c2 {
-        flex-direction: column;
-        align-content: center;
-        align-items: center;
-        align-self: center;
-        max-width: max-content;
-        transform: translateY(-40px);
+    .contact a {
+        min-width: 300px;
+        height: 70px;
     }
 }
