--- a/style-contact.css
+++ b/style-contact.css
@@ -23,6 +23,8 @@ body, html {
 
     display: flex;
     justify-content: center;
+    align-content: center;
+    align-items: center;
     flex-direction: column;
     gap: 24px;
 }
@@ -43,8 +45,10 @@ h2 {
     display: flex;
     flex-direction: column;
     justify-content: center;
-    align-items: center;
+
     gap: 24px;
+
+    max-width: fit-content;
 
     border: 2px;
     text-shadow: 0 0 10px #ffffff;
@@ -76,7 +80,7 @@ h2 {
     transition: background-color 0.5s ease, transform 0.4s ease, border-color 0.8s ease;
 }
 
-a:hover {
+.contact a:hover {
     background-color: #111;
     box-shadow: 0 0 20px #8006da;
     text-shadow: 0 0 20px #8006da;
