--- a/style.css
+++ b/style.css
@@ -23,6 +23,7 @@ body, html {
 
     display: flex;
     justify-content: center;
+    align-items: center;
     flex-direction: column;
     gap: 24px;
 }
@@ -48,6 +49,8 @@ p {
 
 .links, .links_c2{
     z-index: 1;
+
+    width: fit-content;
 
     display: flex;
     justify-content: center;
