--- a/style-about.css
+++ b/style-about.css
@@ -205,6 +205,8 @@ button:active, .button:active{
         font-size: 12px;
     }
     .content {
+        height: 100dvh;
+
         flex-direction: column;
         gap: 16px;
     }
