fix mobile view in safari in edge (probably)

--- a/src/css/style-about.css
+++ b/src/css/style-about.css
@@ -203,6 +203,9 @@ button:active, .button:active{
 @media (max-width: 768px) {
     body{
         font-size: 12px;
+
+        height: 100dvh;
+        width: 100dvw;
     }
     .content {
         flex-direction: column;
