--- a/src/css/style-contact.css
+++ b/src/css/style-contact.css
@@ -171,6 +171,10 @@ h2 {
 
 /*Mobile view*/
 @media (width <= 660px){
+    body{
+        height: 100dvh;
+        width: 100dvw;
+    }
     h1 {
         font-size: 3.5em;
     }
