--- a/src/css/style-projects.css
+++ b/src/css/style-projects.css
@@ -210,6 +210,9 @@ a:visited {
 @media screen and (max-width: 600px) {
     body {
         font-size: 18px;
+
+        height: 100dvh;
+        width: 100dvw;
     }
 
     h1 {
