--- a/src/css/style-about.css
+++ b/src/css/style-about.css
@@ -216,7 +216,7 @@ button:active, .button:active{
     .content {
         flex-direction: column;
 
-        max-height: 100dvh;
+        max-height: 100svh;
 
         gap: 16px;
     }
@@ -225,7 +225,7 @@ button:active, .button:active{
     }
 
     .back .button {
-        min-width: 100px;
+        visibility: hidden;
     }
 
     .about_content {
