--- a/src/css/style-about.css
+++ b/src/css/style-about.css
@@ -4,8 +4,8 @@ body, html {
 
     background-color: #181a1b;
     width: 100vw;
-    height: 100dvh;
-    min-height: 100dvh;
+    height: 100svh;
+    min-height: 100svh;
 
     font-family: var(--font-family), system-ui, -apple-system, Roboto, sans-serif;
     font-style: normal;
@@ -199,8 +199,8 @@ button:active, .button:active{
     position: absolute;
     top: 0;
 
-    height: 100dvh;
-    width: 100dvw;
+    height: 100vh;
+    width: 100vw;
 
     background-repeat: no-repeat;
     background-size: cover;
@@ -210,7 +210,7 @@ button:active, .button:active{
     body{
         font-size: 12px;
 
-        width: 100dvw;
+        width: 100svw;
     }
 
     .content {
@@ -218,7 +218,7 @@ button:active, .button:active{
 
         max-height: 100svh;
 
-        gap: 16px;
+        gap: 12px;
     }
     h1 {
         font: 700 50px/100% var(--font-family);
@@ -234,5 +234,6 @@ button:active, .button:active{
 
     .info {
         width: 85svw;
+        height: fit-content;
     }
 }
