--- a/src/css/style.css
+++ b/src/css/style.css
@@ -3,9 +3,9 @@ body, html {
     padding: 0;
 
     background-color: #181a1b;
-    width: 100vw;
+    width: 100svw;
     height: 100%;
-    min-height: 100vh;
+    min-height: 100svh;
 
     font-family: system-ui, -apple-system, var(--font-family), Roboto, sans-serif;
     font-style: normal;
@@ -173,8 +173,8 @@ a:hover {
 /*Mobile view*/
 @media (width <= 660px) {
     body{
-        height: 100dvh;
-        width: 100dvw;
+        height: 100svh;
+        width: 100svw;
     }
     h1 {
         font-size: 3.5em;
