--- a/src/css/main.css
+++ b/src/css/main.css
@@ -34,12 +34,6 @@ main{
     align-items: center;
     text-align: center;
 
-    background:
-            repeating-radial-gradient(#000 0 0.0001%,var(--background) 0 0.0002%) 50% 0/1750px 1750px,
-            repeating-conic-gradient(#000 0 0.0001%,var(--background) 0 0.0002%) 60% 60%/1750px 1750px;
-    background-blend-mode: difference;
-    animation: b .3s infinite alternate;
-
     width: 80svw;
     height: 70svh;
 
@@ -47,7 +41,29 @@ main{
 
     padding: 20px;
     border-radius: 10px;
+}
 
+.noise {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    pointer-events: none;
+    opacity: 0.1;
+}
+
+@keyframes noise-animation {
+    0% {
+        background-position: 0 0;
+    }
+    100% {
+        background-position: 500px 500px;
+    }
+}
+
+.noise-animate {
+    animation: noise-animation 5s ease-in-out infinite;
 }
 
 .screen .s-communicat{
@@ -93,6 +109,7 @@ main{
 }
 
 .screen h1{
+
     font: 700 5rem var(--font-family);
     color: var(--text);
 }
