--- a/src/css/dropdown.css
+++ b/src/css/dropdown.css
@@ -32,7 +32,7 @@
     right: 0;
     display: none;
     position: absolute;
-    background-color: rgba(var(--rgba-background), 0,2);
+    background-color: rgba( var(---rgba-background), 0,2);
     backdrop-filter: blur(10px);
 
     border: 1px solid var(--primary);
