--- a/src/css/projects.css
+++ b/src/css/projects.css
@@ -58,9 +58,9 @@
     border-radius: 10px;
 }
 
-.project iframe{
+.project img{
     width: 100%;
-    height: 512px;
+    height: 100%;
     object-fit: cover;
 
     pointer-events: none;
